[project]
name = "mcp-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "boto3>=1.37.28",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai-agents>=0.0.8",
    "pydantic>=2.11.2",
    "starlette>=0.46.1",
    "typing-extensions>=4.13.1",
]
